adminlte smallbox fix

--- a/adminlte_smallbox/adminlte_smallbox.html
+++ b/adminlte_smallbox/adminlte_smallbox.html
@@ -8,6 +8,6 @@
         <i class="fa {!Icon}"></i>
     </div>
     <a href="{!Uri}" class="small-box-footer">
-        {!UriName} <i class="fa fa-arrow-circle-right"></i>
+        {!UriName} <i style="margin-left: 5px" class="fa fa-arrow-circle-right"></i>
     </a>
 </div>
