--- a/helloworld/helloworld.html
+++ b/helloworld/helloworld.html
@@ -2,4 +2,4 @@
 {!js(<script type="text/javascript" src="plugins/elements/helloworld/helloworld.js"></script>)}
 <!-- your code here -->
 <h1>Hello {!Name}!</h1>
-<p>Ini adalah contoh element</p>
+<p>This is minimal example of Puko Elements.</p>
